--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="info-container">
             <div class="cards scard-1">
                 <div class="img im-1"><img src="sid1.jpg" alt="Siddhartha"></div>
-                <div class="card-text">\This is some subtext under an illustration or image</div>
+                <div class="card-text">This is some subtext under an illustration or image</div>
             </div>
             
             <div class="cards card-2">
@@ -68,6 +68,20 @@
                 <div class="card-text">This is some subtext under an illustration or image</div>
             </div>
         </div>
+    </section>
+
+    <section class="quote">
+
+        <div class="quote-container">
+            <div class="quote-text">
+                This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+            </div>
+
+            <div class="quote-source">
+                -Thor, God of Thunder
+            </div>
+        </div>
+
     </section>
 </body>
 </html>
