Added footer section, final commit of intial version
Implemented initial layout and styling of footer as per lesson specifications. Also this is the last commit of initial version.

--- a/index.html
+++ b/index.html
@@ -105,5 +105,8 @@
 
         </div>
      </section>
+
+     <!-- Beginning of footer  -->
+     <footer>Copyright &copy The Odin Project2021</footer>
 </body>
 </html>
